src/style.css
/* ... */
.scenario-card-description {
    margin-top: var(--main-margin);
    text-align: center;
}

.logo-wrapper {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.logo-section {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.logo-img {
    width: 250px;
    height: auto;
}

.sidebar-collapse-control {
    background-color: var(--main-primary);
    padding: 1em;
    color: white;
}

.sidebar-collapse-control::after {
    content: "Menu";
}

.team-logo {
    width: 200px;
    height: auto;
    margin-left: auto;
}

.profiles-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.profile {
    padding: var(--main-item-margin);
    display:flex;
    align-items: center;
    flex-direction: column;
    flex: 1 0 30%;
    flex-wrap: wrap;
}

.profile-photo {
    width: 150px;
    height: 150px;
    border-radius: 100px;
}

.profile-name {
    text-align: center;
    font-size: 16px;
}

.collaborator-container {
    display: flex;
    flex-direction: column;
}

/* question FAB */

.float-header {
    font-weight: bold !important;
    color: var(--main-primary);
    font-size: 10px;
    margin-top: 2px;
    margin-left: -25px !important;
    width: 100px;
}
  
.float{
    position:fixed;
    width:45px;
    height:45px;
    bottom:65px;
    right:40px;
    background: var(--main-primary);
    color:#FFF;
    border-radius:50px;
    text-align: center;
    font-size:30px;
    box-shadow: 2px 2px 3px #999;
    z-index:100;
    padding-top: 0px;
}
  
.float:hover {
    text-decoration: none;
}

/* Act Now Section */
.act-now-wrapper {
    display: flex;
    flex-direction: column;
}

.github-link {
    color: var(--main-primary) !important;
    text-decoration: underline;
}

/* FAROL COVID */
.alert-banner {
    width: 100vw;
    height: 400px;
}

.indicator-card {
    margin-top: 50px;
    padding: var(--main-padding);
    width: 280px;
    height: 400px;
    border-radius: var(--main-border-radius);
    opacity: 0.98;
    background-color: white;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}


.product-section {
    margin-top: 150px;
}

/* .pdf-button {
    font-family: var(--main-header-font-family); 
    background-color: var(--main-primary);
    border: var(--main-primary);
    color: var(--main-white);
    border-radius: var(--main-border-radius);
    padding: 20px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 12px;
    margin: 4px 2px;
  } */


@media only screen and (max-width: 425px) {
    .indicator-card {
        height: 350px;
    }

    .product-section {
        margin-top: 1500px;
    }
}


.risk-pill {
    width: 125px;
    text-align: center;
    border-radius: 5px;
}

.product-card {
    width: 400px;
    height: 350px;
    border-radius: 15px;
    margin-right: var(--main-item-margin);
    padding: var(--main-padding)
}

